# back-end

./: .dockerignore  .gitmodules  1.txt  Cargo.toml  Dockerfile  build.rs  codecov.yml  readme.md  sonar-project.properties
.github/workflows/: build.yml  deploy.yml
docs/: api.md
migrations/: 0001_create_users_table.down.sql  0001_create_users_table.up.sql  0002_create_rooms_table.down.sql  0002_create_rooms_table.up.sql  0003_create_spares_table.down.sql  0003_create_spares_table.up.sql  0004_create_availables_table.down.sql  0004_create_availables_table.up.sql  0004_create_vacancies_table.down.sql  0004_create_vacancies_table.up.sql
src/: app.rs  config.rs  lib.rs  main.rs  user.rs  val.rs
src/app/: admin.rs  algorithm.rs  checkin.rs  config.rs  hash.rs  mod.rs  sign.rs  spare.rs  user.rs
src/app/algorithm/: mod.rs
src/app/fixtures/: availables.sql  init_old_data.sql  rooms.sql  rooms_xy.sql  spare_init_data.json  spares.sql  spares_list.sql  users.sql
src/cpp/: distribute.h  mcmf.h
