
[package]
name = "backend"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
api = { path = "api" }
tokio = { version = "1.44.2", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tower = { version = "0.5.2", features = ["full"] }
serde_json = "1.0.140"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.10", features = ["full"] }
argon2 = "0.5.3"
hmac = "0.12.1"
hex = "0.4.3"
sha2 = "0.10.9"
chrono = "0.4.33"
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
iso8601 = { version = "0.6.2", features = ["chrono", "serde"] }

rand = "0.8.5"